<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="#FFFFFF"
        tools:context=".ui.HomePageActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/activeCargosCardView"
            android:layout_width="347dp"
            android:layout_height="100dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="23dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/truckListCardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/activeCargosDetailsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activeCargosTextView"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/imageView4"
                    android:text="@string/active_cargos_detail"
                    android:textColor="#3E3C3C"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/activeCargosTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/imageView4"
                    android:text="@string/active_cargos_list"
                    android:textColor="#3E3C3C"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="83dp"
                    android:layout_height="83dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_outline_work_outline_24" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/truckListCardView"
            android:layout_width="347dp"
            android:layout_height="100dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="23dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverListCardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="83dp"
                    android:layout_height="83dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_outline_local_shipping_24" />

                <TextView
                    android:id="@+id/vehiclesListTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/imageView2"
                    android:text="@string/truck_and_trailers_list"
                    android:textColor="#3E3C3C"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vehicleDetailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vehiclesListTextView"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/imageView2"
                    android:text="@string/trucks_list_detail"
                    android:textColor="#3E3C3C"
                    android:textSize="17sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/driverListCardView"
            android:layout_width="347dp"
            android:layout_height="100dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="23dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeCardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteY="-85dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/driverListTextView"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/imageView3"
                    android:text="@string/drivers_list_detail"
                    android:textColor="#3E3C3C"
                    android:textSize="17dp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="83dp"
                    android:layout_height="83dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/ic_outline_person_24" />

                <TextView
                    android:id="@+id/driverListTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="73dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/imageView3"
                    android:text="@string/drivers_list"
                    android:textColor="#3E3C3C"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/welcomeCardView"
            android:layout_width="366dp"
            android:layout_height="200dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            app:cardBackgroundColor="#051A8E"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/weatherIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/greetingsTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"

                    tools:src="" />

                <TextView
                    android:id="@+id/cityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/temperatureTextView"
                    android:layout_centerHorizontal="true"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_baseline_person_pin_circle_24" />

                <TextView
                    android:id="@+id/temperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/greetingsTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="75dp"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/greetingsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>